Fix: All images covering full size
Only detail images will load covering the full size of the container.

--- a/trip_scanner/css/style.css
+++ b/trip_scanner/css/style.css
@@ -3,7 +3,7 @@ body {
     height: 100%;
 }
 
-img {
+img#header-item-image {
     object-fit: cover;
     height: 100%;
     width: 100%;
